--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -8,13 +8,11 @@ jobs:
      run: echo "${{ toJSON(github.event) }}"
    - name: Get Code
      uses: actions/checkout@v3
-   - name: Install Nodejs
-     uses: actions/setup-node@v3
    - name: Install Dependencies
      run: npm ci
-   - name: Run tests
-     run: npm test
+   - name: Test code
+     run: npm run test
    - name: Build Project
      run: npm run build
-   - name: Deploy
+   - name: Deploy Project
      run: echo "Deploying..."
