--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -4,6 +4,13 @@ on:
   types:
    - opened
  workflow_dispatch: 
+ push:
+  branches:
+    - main
+    - 'dev-*'
+    - 'feat/**'
+  paths-ignore: 
+    - '.github/workfllows/*'
 jobs:
  deploy:
   runs-on: ubuntu-latest
